--- a/assets/editor.css
+++ b/assets/editor.css
@@ -18,6 +18,19 @@ body{
 
 .div_photo{
     width: 40%;
-    height: 300px;
+    height:100px;
     background-color: brown;
+}
+
+.controls{
+    display: block;
+    width: auto;
+    height: 20px;
+    background-color: red;
+    opacity: 0.5;
+    border: solid 1px aliceblue;
+    border-radius: 10%;
+    position: absolute;
+    top: 0;
+    right: 0;
 }
