--- a/assets/editor.css
+++ b/assets/editor.css
@@ -5,6 +5,7 @@ body{
 .div_arte{
     border: 1px solid rgba(0,0,0,0.5);
     width: 80vw;
+    min-width: 800px;
     position: absolute;
     top: 50%;
     left: 50%;
